--- a/style.css
+++ b/style.css
@@ -152,7 +152,7 @@ top:100px
   /* transform: translate(-20%, -45%); */
   margin-right: 40px;
   border-radius: 10px 10px 10px 10px; 
-  
+  text-align: right;
 }
 
 .box select {
@@ -160,7 +160,7 @@ top:100px
   background-color: #1e4072 ;
   color: white;
   padding: 12px;
-  width: 250px;
+  /* width: 250px; */
   border: none;
   font-size: 20px;
   box-shadow: 0 5px 25px rgba(0, 0, 0, 0.2);
@@ -171,7 +171,7 @@ top:100px
 }
 
 .box::before {
-  content: "\f13a";
+  /* content: "\f13a"; */
   font-family: FontAwesome;
   /* position: absolute; */
   top: 0;
@@ -192,6 +192,56 @@ top:100px
 }
 
 .box select option {
+  padding: 30px;
+}
+
+.box2 {
+  /* position: absolute; */
+  /* top: 50%;
+  left: 50%;
+  transform: translate(-20%, -45%); */
+  /* margin-right: 40px; */
+  border-radius: 10px 10px 10px 10px; 
+  text-align: right;
+}
+
+.box2 select {
+  border-radius: 5px 5px 5px 5px; 
+  background-color: #505962 ;
+  color: white;
+  padding: 12px;
+  /* width: 250px; */
+  border: none;
+  font-size: 20px;
+  box-shadow: 0 5px 25px rgba(0, 0, 0, 0.2);
+  -webkit-appearance: button;
+  appearance: button;
+  outline: none;
+  text-align: right;
+}
+
+.box2::before {
+  /* content: "\f13a"; */
+  font-family: FontAwesome;
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 20%;
+  height: 100%;
+  text-align: center;
+  font-size: 28px;
+  
+  color: rgba(255, 255, 255, 0.5);
+  background-color: rgba(255, 255, 255, 0.1);
+  pointer-events: none;
+}
+
+.box2:hover::before {
+  color: rgba(255, 255, 255, 0.6);
+  background-color: rgba(255, 255, 255, 0.2);
+}
+
+.box2 select option {
   padding: 30px;
 }
 #radioBtn{
